--- a/PedalParadise2/PedalParadise/Views/Employee/Index.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Employee/Index.cshtml
@@ -1,1 +1,12 @@
-﻿
+﻿@model IEnumerable<Employee>
+
+@{
+    ViewData["Title"] = "Index";
+}
+
+@if (TempData["ResultOk"] != null)
+{
+    <h1 class="alert-success">@TempData["ResultOk"]</h1>
+}
+
+
