added some login and register functionalitites, model may change eventually

--- a/PedalParadise2/PedalParadise/Views/Home/Index.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Home/Index.cshtml
@@ -3,6 +3,21 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">🌴 Pedal Paradise 🌴</h1>
+    <p class="display-2">Here goes a motto.</p>
+</div>
+<div class="container-fluid p-3">
+    <p class="display-3">New promos</p>
+</div>
+<div class="container-fluid p-3">
+    <p class="display-3">next events</p>
+</div>
+<div class="container-fluid p-3">
+    <p class="display-3">new arrivals</p>
+</div>
+<div class="container-fluid p-3">
+    <p class="display-3">Become a vip member</p>
+</div>
+<div class="container-fluid p-3">
+    <p class="display-3">social media and news</p>
 </div>
