--- a/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
@@ -23,10 +23,21 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Become a member</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">cart</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
+                <a class="btn btn-info" role="button" asp-action="Index" asp-controller="Login">log in</a>
+                <a class="btn btn-primary" role="button" asp-action="Index" asp-controller="Register">sign up</a>
             </div>
         </nav>
     </header>
