--- a/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Shop</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Become a member</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Become a member</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">cart</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">cart</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
