all views work, just needs to match styles because tailwind doesn't work on my machine

--- a/PedalParadise2/PedalParadise/Views/Register/Index.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Register/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container mt-5">
     <h2>Client Registration Form</h2>
-    <form action="/Register/Register" method="POST" id="regform">
+    <form action="/RegisterAttempt" method="POST" id="regform">
         <!-- First Name -->
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
