--- a/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
                         </li>
                     </ul>
                 </div>
-                <a class="btn btn-info" role="button" asp-action="Index" asp-controller="Login">log in</a>
-                <a class="btn btn-primary" role="button" asp-action="Index" asp-controller="Register">sign up</a>
+                <a class="btn btn-info" role="button" asp-action="Login" asp-controller="Account">log in</a>
+                <a class="btn btn-primary" role="button" asp-action="Register" asp-controller="Account">sign up</a>
             </div>
         </nav>
     </header>
