--- a/PedalParadise2/PedalParadise/Views/Login/Index.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Login/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿@page "/Login"
 @model PedalParadise.Models.ViewModels.LoginViewModel;
 
-    <div class="container mt-5">
-        <h2 class="text-center">Login</h2>
-        <form asp-controller="Login" asp-action="SubmitLogin" method="post">
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="Email" required />
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="Password" required />
-            </div>
-            <button type="submit" class="btn btn-primary">Enter</button>
-        </form>
-    </div>
+<div class="container mt-5 text-center">
+    <h2>Login</h2>
+    <form asp-controller="Login" asp-action="SubmitLogin" method="post">
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="Email" required />
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="Password" required />
+        </div>
+        <button type="submit" class="btn btn-primary">Enter</button>
+    </form>
+</div>
 
