--- a/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Shared/_Layout.cshtml
@@ -7,21 +7,19 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PedalParadise.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
-    <header>
+<body class="container-fluid">
+    <header class="container-fluid">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PedalParadise</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Pedal Paradise 🚲🌴</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between ms-auto">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                <div class="navbar-collapse collapse d-sm-inline-flex row justify-content-end">
+                    <ul class="navbar-nav flex-grow-1 col-4 justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Shop</a>
                         </li>
@@ -35,9 +33,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end col-4">
+                        <a class="btn btn-info m-2" role="button" asp-action="Login" asp-controller="Account">log in</a>
+                        <a class="btn btn-warning m-2" role="button" asp-action="Register" asp-controller="Account">sign up</a>
+                    </div>
                 </div>
-                <a class="btn btn-info" role="button" asp-action="Login" asp-controller="Account">log in</a>
-                <a class="btn btn-primary" role="button" asp-action="Register" asp-controller="Account">sign up</a>
+                
             </div>
         </nav>
     </header>
