--- a/PedalParadise2/PedalParadise/wwwroot/css/site.css
+++ b/PedalParadise2/PedalParadise/wwwroot/css/site.css
@@ -16,3 +16,21 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+@keyframes pulseBadge {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.3);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.pulse {
+    animation: pulseBadge 0.6s ease;
+}
